clientelling/objects/Recommended_Product__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recommended Products</relationshipLabel>
        <relationshipName>Recommended_Productsab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recommended Products</relationshipLabel>
        <relationshipName>Recommended_Products1ab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recommended Products</relationshipLabel>
        <relationshipName>Recommended_Productsab</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE( Product__r.Small_Img_URL__c , &quot;Image&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Recommended Products</relationshipLabel>
        <relationshipName>Recommended_Productsab</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Recommended Products</relationshipLabel>
        <relationshipName>Recommended_Productsab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejected_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recommended_Productsab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejected_Date__c</fullName>
        <label>Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <label>Recommended Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Recommended Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommended Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>